--- a/Javascript/test.html
+++ b/Javascript/test.html
@@ -84,88 +84,169 @@ num++
                     </details>
                 </div>
             </div>
-        </div>
-        <!-- sample01 -->
-        <div id="sample02" class="sample">
-            <h3>02. 0부터 100까지 짝수,홀수 출력하기(for문)</h3>
-            <p>
+            <!-- sample01 -->
 
-            </p>
-            <pre class="line-numbers"><code class="language-js">        //짝수
-{for (let i = 0; i <= 100; i++) {
-if (i % 2 == 0) {
-console.log(i)}}}
-        //홀수
-{for (let i = 0; i <= 100; i++) {
-if (i % 2 !== 0) {
-console.log(i)}}}</code></pre>
-            <div class="reuslt">
-                <details>
-                    <summary>결과 확인하기</summary>
-                    <div>
-                    </div>
-                </details>
-            </div>
-        </div>
-        </div>
-        <!-- sample02 -->
-        <div id="sample03" class="sample">
-            <h3>03. 1부터 100까지 짝수는 파란색, 홀수는 빨간색 출력하기</h3>
-            <p>
+            <div id="sample02" class="sample">
+                <h3>02. 0부터 100까지 짝수,홀수 출력하기(for문)</h3>
+                <p>
 
-            </p>
-            <pre class="line-numbers"><code class="language-js">{for (let i = 1; i <= 100; i++) {
-if (i % 2 == 0) {
-document.write("<span style='color:blue'>" + i + "</span>");
-} else {
-document.write("<span style='color:red'>" + i + "</span>");}}}</code></pre>
-            <div class="reuslt">
-                <details>
-                    <summary>결과 확인하기</summary>
-                    <div>
-                    </div>
-                </details>
+                </p>
+                <pre class="line-numbers"><code class="language-js">        //짝수
+    {for (let i = 0; i <= 100; i++) {
+    if (i % 2 == 0) {
+    console.log(i)}}}
+            //홀수
+    {for (let i = 0; i <= 100; i++) {
+    if (i % 2 !== 0) {
+    console.log(i)}}}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            짝수만 출력 0~100 </br>
+                            홀수만 출력 1~99
+                        </div>
+                    </details>
+                </div>
             </div>
-        </div>
-        </div>
-        <!-- sample03 -->
-        <div id="sample04" class="sample">
-            <h3>04. 중첩 for문을 이용해서 구구단 출력하기</h3>
-            <p>
+            <!-- sample02 -->
+            <div id="sample03" class="sample">
+                <h3>03. 1부터 100까지 짝수는 파란색, 홀수는 빨간색 출력하기</h3>
+                <p>
 
-            </p>
-            <pre class="line-numbers"><code class="language-js">{for (let i = 2; i <= 9; i++) {
-for (let j = 1; j <= 9; j++) {
-console.log(i + "*" + j + " = " + i * j)}}}</code></pre>
-            <div class="reuslt">
-                <details>
-                    <summary>결과 확인하기</summary>
-                    <div>
-                    </div>
-                </details>
+                </p>
+                <pre class="line-numbers"><code class="language-js">{for (let i = 1; i <= 100; i++) {
+    if (i % 2 == 0) {
+    document.write("<span style='color:blue'>" + i + "</span>");
+    } else {
+    document.write("<span style='color:red'>" + i + "</span>");}}}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            짝수는 파란색 홀수는 빨간색
+                        </div>
+                    </details>
+                </div>
             </div>
-        </div>
-        </div>
-        <!-- sample05 -->
-        <div id="sample05" class="sample">
-            <h3>05. 중첩 for문을 이용해서 8단 출력하기</h3>
-            <p>
+            <!-- sample03-->
+            <div id="sample04" class="sample">
+                <h3>04. 중첩 for문을 이용해서 구구단 출력하기</h3>
+                <p>
 
-            </p>
-            <pre class="line-numbers"><code class="language-js">{for (let i = 8; i <= 8; i++) {
-for (let j = 1; j <= 9; j++) {
-console.log(i + "*" + j + " = " + i * j)}}}
-</code></pre>
-            <div class="reuslt">
-                <details>
-                    <summary>결과 확인하기</summary>
-                    <div>
-                    </div>
-                </details>
+                </p>
+                <pre class="line-numbers"><code class="language-js">{for (let i = 2; i <= 9; i++) {
+    for (let j = 1; j <= 9; j++) {
+    console.log(i + "*" + j + " = " + i * j)}}}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            2*1 = 2 </br>
+                            2*2 = 4</br>
+                            2*3 = 6</br>
+                            2*4 = 8</br>
+                            2*5 = 10</br>
+                            2*6 = 12</br>
+                            2*7 = 14</br>
+                            2*8 = 16</br>
+                            2*9 = 18</br>
+                            3*1 = 3</br>
+                            3*2 = 6</br>
+                            3*3 = 9</br>
+                            3*4 = 12</br>
+                            3*5 = 15</br>
+                            3*6 = 18</br>
+                            3*7 = 21</br>
+                            3*8 = 24</br>
+                            3*9 = 27</br>
+                            4*1 = 4</br>
+                            4*2 = 8</br>
+                            4*3 = 12</br>
+                            4*4 = 16</br>
+                            4*5 = 20</br>
+                            4*6 = 24</br>
+                            4*7 = 28</br>
+                            4*8 = 32</br>
+                            4*9 = 36</br>
+                            5*1 = 5</br>
+                            5*2 = 10</br>
+                            5*3 = 15</br>
+                            5*4 = 20</br>
+                            5*5 = 25</br>
+                            5*6 = 30</br>
+                            5*7 = 35</br>
+                            5*8 = 40</br>
+                            5*9 = 45</br>
+                            6*1 = 6</br>
+                            6*2 = 12</br>
+                            6*3 = 18</br>
+                            6*4 = 24</br>
+                            6*5 = 30</br>
+                            6*6 = 36</br>
+                            6*7 = 42</br>
+                            6*8 = 48</br>
+                            6*9 = 54</br>
+                            7*1 = 7</br>
+                            7*2 = 14</br>
+                            7*3 = 21</br>
+                            7*4 = 28</br>
+                            7*5 = 35</br>
+                            7*6 = 42</br>
+                            7*7 = 49</br>
+                            7*8 = 56</br>
+                            7*9 = 63</br>
+                            8*1 = 8</br>
+                            8*2 = 16</br>
+                            8*3 = 24</br>
+                            8*4 = 32</br>
+                            8*5 = 40</br>
+                            8*6 = 48</br>
+                            8*7 = 56</br>
+                            8*8 = 64</br>
+                            8*9 = 72</br>
+                            9*1 = 9</br>
+                            9*2 = 18</br>
+                            9*3 = 27</br>
+                            9*4 = 36</br>
+                            9*5 = 45</br>
+                            9*6 = 54</br>
+                            9*7 = 63</br>
+                            9*8 = 72</br>
+                            9*9 = 81
+                        </div>
+                    </details>
+                </div>
             </div>
+            <!-- sample04-->
+            <div id="sample05" class="sample">
+                <h3>05. 중첩 for문을 이용해서 8단 출력하기</h3>
+                <p>
+
+                </p>
+                <pre class="line-numbers"><code class="language-js">{for (let i = 8; i <= 8; i++) {
+    for (let j = 1; j <= 9; j++) {
+    console.log(i + "*" + j + " = " + i * j)}}}
+    </code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            8*1 = 8 </br>
+                            8*2 = 16 </br>
+                            8*3 = 24 </br>
+                            8*4 = 32 </br>
+                            8*5 = 40 </br>
+                            8*6 = 48 </br>
+                            8*7 = 56 </br>
+                            8*8 = 64 </br>
+                            8*9 = 72
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample05 -->
         </div>
-        </div>
-        <!-- sample05 -->
 
         <script src="assets/js/prism.js"></script>
         <script>
