--- a/quiz/quiz06.html
+++ b/quiz/quiz06.html
@@ -25,31 +25,90 @@
         </nav>
     </header>
     <!-- //header -->
-
     <main id="main">
         <div class="quiz__wrap"></div>
     </main>
     <!-- //main -->
-
     <footer id="footer">
-        <a href="mail.to:nys060121@naver.com">nys060121@naver.com</a>
-
+        <a href="mailto:kingsongsm97@gmail.com">kingsongsm97@gmail.com</a>
     </footer>
     <!-- //footer -->
-
     <script>
-
-        //선택자
-
+        // 선택자
         const quizWrap = document.querySelector(".quiz__wrap");
-
         // 문제 정보
         let quizInfo = [];
-
-        //문제 가져오기
+        // 문제 가져오기
         const fetchQuiz = () => {
-            fetch("")
+            fetch("https://kingsong97.github.io/class2024/json/gineungsaJC2005_02.json")
+                .then(res => res.json())
+                .then(items => {
+                    console.log(items);
+                    quizInfo = items.map((item, idx) => {
+                        const formattedQuiz = {
+                            Date: "2005년 2회",
+                            Type: item.subject,
+                            question: item.question,
+                            desc: item.desc,
+                            answer: item.correct_answer
+                        }
+                        // 보기 가져오기
+                        const choices = [...item.incorrect_answers, item.correct_answer];
+                        // 보기 랜덤 섞기
+                        for (let i = choices.length - 1; i > 0; i--) {
+                            const j = Math.floor(Math.random() * (i + 1));
+                            [choices[i], choices[j]] = [choices[j], choices[i]];
+                        }
+                        // 보기 추가하기
+                        formattedQuiz.choices = choices;
+                        // 결과값 출력
+                        return formattedQuiz;
+                    });
+                    console.log(quizInfo);
+                    // 문제출력
+                    updateQuiz();
+                })
         }
+        // 문제 출력
+        const updateQuiz = () => {
+            const quizArray = [];
+            quizInfo.forEach((quiz, index) => {
+                quizArray.push(`
+                    <div class="quiz">
+                        <div class="quiz__header">${quiz.Date} ${quiz.Type}</div>
+                        <div class="quiz__main">
+                            <div class="question">${index + 1}. ${quiz.question}</div>
+                            <div class="choices">
+                                <label for="choice${index}-1">
+                                    <input type="radio" id="choice${index}-1" name="choice-${index}" value="1">
+                                    <span>${quiz.choices[0]}</span>
+                                </label>
+                                <label for="choice${index}-2">
+                                    <input type="radio" id="choice${index}-2" name="choice-${index}" value="2">
+                                    <span>${quiz.choices[1]}</span>
+                                </label>
+                                <label for="choice${index}-3">
+                                    <input type="radio" id="choice${index}-3" name="choice-${index}" value="3">
+                                    <span>${quiz.choices[2]}</span>
+                                </label>
+                                <label for="choice${index}-4">
+                                    <input type="radio" id="choice${index}-4" name="choice-${index}" value="4">
+                                    <span>${quiz.choices[3]}</span>
+                                </label>
+                            </div>
+                            <div class="answer">${quiz.answer}</div>
+                            <div class="desc">${quiz.desc}</div>
+                        </div>
+                    </div>
+                `)
+            })
+            quizWrap.innerHTML = quizArray.join("");
+        }
+        fetchQuiz();
+        //페이지가 로드된 후 실행
+        document.addEventListener("DOMContentLoaded", () => {
+            fetchQuiz();
+        })
     </script>
 </body>
 
