--- a/quiz/c-quiz01.html
+++ b/quiz/c-quiz01.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mission</title>
-    <link rel="stylesheet" href="assets/css/quiz.css">
+    <link rel="stylesheet" href="assets/css/c-quiz.css">
 
 
 </head>
