--- a/Effect1/eee.html
+++ b/Effect1/eee.html
@@ -57,6 +57,7 @@
         .bubble-18 {left: 88%; animation-delay: 4700ms;}
         .bubble-19 {left: 44%; animation-delay: 4650ms;}
         .bubble-20 {left: 42%; animation-delay: 1100ms;}
+        
         .jelly-wrapper {
             width: 256px;
             height: 310px;
@@ -64,30 +65,31 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            animation: jelly-movement 10s infinite linear;
+            animation: jelly-movement 7s infinite linear;
         }
+    
         @keyframes jelly-movement {
-            0% {top: 55%; left: 50%;}
-            5% {top: 50%;}
-            10% {top: 55%;}
-            15% {top: 50%;}
-            20% {top: 55%;}
-            25% {top: 50%; left: calc(100% - 150px);}
-            30% {top: 55%;}
-            35% {top: 50%;}
-            40% {top: 55%;}
-            45% {top: 50%;}
-            50% {top: 55%; left: 50%;}
-            55% {top: 50%;}
-            60% {top: 55%;}
-            65% {top: 50%;}
-            70% {top: 55%;}
-            75% {top: 50%; left: 150px;}
-            80% {top: 55%;}
-            85% {top: 50%;}
-            90% {top: 55%;}
-            95% {top: 50%;}
-            100% {top: 55%; left: 50%;}
+            0% {top: 20%; left: 40%;}
+            5% {top: 25%; }
+            10% {top: 40%;}
+            15% {top: 30%;}
+            20% {top: 35%;}
+            25% {top: 50%;  transform: rotate3d(0, 1, 0, 1deg) rotate3d(0, 1, 0, 0deg);left: calc(100% - 700px);}
+            30% {top: 40%;}
+            35% {top: 35%;}
+            40% {top: 20%;}
+            45% {top: 25%;}
+            50% {top: 20%; left: 40%; transform: rotate3d(0, 1, 0, 180deg) rotate3d(0, 1, 0, 0deg);}
+            55% {top: 25%;}
+            60% {top: 20%;}
+            65% {top: 25%;}
+            70% {top: 40%;}
+            75% {top: 50%; left: 430px; transform: rotate3d(0, 1, 0, 0deg) rotate3d(0, 1, 0, 180deg);}
+            80% {top: 40%;}
+            85% {top: 25%;}
+            90% {top: 20%;}
+            95% {top: 25%;}
+            100% {top: 20%; left: 40%;}
         }
         @keyframes bubble-move {
             0% {
@@ -102,86 +104,81 @@
             }
         }
         .jelly-hair {
-            width: 100px;
+            width: 140px;
             height: 75px;
-            background: linear-gradient(to bottom, #EF891A 0%, #EF891A 2%, #EBF28A 100%);
+            background: linear-gradient(to bottom, #000000 0%, #044b63 2%, #000000 100%);
             position: absolute;
-            left: 30%;
-            top: -10px;
+            left: 140%;
+            top: -40px;
             z-index: -2;
-            border-radius: 25px;
-            animation: hair-movement 10s infinite linear;
+            border-top-right-radius: 300px;
+             animation: hair infinite linear;
         }
-        @keyframes hair-movement {
-            0% {transform: rotate3d(0, 1, 0, 180deg) rotate3d(0, 0, 1, 75deg);}
-            20% {transform: rotate3d(0, 1, 0, 180deg) rotate3d(0, 0, 1, 75deg);}
-            25% {transform: rotate3d(0, 1, 0, 90deg) rotate3d(0, 0, 1, 75deg);}
-            30% {transform: rotate3d(0, 1, 0, 0deg) rotate3d(0, 0, 1, 75deg);}
-            70% {transform: rotate3d(0, 1, 0, 0deg) rotate3d(0, 0, 1, 75deg);}
-            75% {transform: rotate3d(0, 1, 0, 90deg) rotate3d(0, 0, 1, 75deg);}
-            80% {transform: rotate3d(0, 1, 0, 180deg) rotate3d(0, 0, 1, 75deg);}
-            100% {transform: rotate3d(0, 1, 0, 180deg) rotate3d(0, 0, 1, 75deg);}
+
+        .jelly-fin {
+            width: 170px;
+            height: 80px;
+            position: absolute;
+            left: 260px;
+            top: 90px;
+            background-color: #044b63;
+            border-top-left-radius: 200px;
+            border-top-right-radius: 20px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            transform: translateX(-150px);
+            z-index: 20;
+            animation: fin 0.1s infinite linear;
+        }
+
+        @keyframes fin {
+            0% {transform: rotate3d(0, 1, 0, 100deg) rotate3d(0, 0, 0, 1deg);}
+            20% {transform: rotate3d(0, 1, 0, 1deg) rotate3d(0, 0, 0, 1000deg);}
+            80% {transform: rotate3d(0, 1, 0, 1deg) rotate3d(0, 0, 0, 1000deg);}
+            100% {transform: rotate3d(0, 1, 0, 100deg) rotate3d(0, 0, 0, 1deg);}
         }
         .jelly-body {
-            width: 100%;
+            width: 700px;
             height: 250px;
-            background: linear-gradient(to bottom, #009DD2, #EBF28A);
-            border-top-left-radius: 70px;
-            border-top-right-radius: 90px;
+            background: linear-gradient(to bottom, #044b63, #ffffff);
+            border-top-left-radius: 400px;
+            border-top-right-radius: 900px;
             animation: body-movement 10s infinite linear;
+            border-bottom-left-radius: 30px;
+            border-bottom-right-radius: 700px;
             position: relative;
-            z-index: 1;
+            z-index: 10;
             overflow: hidden;
         }
         @keyframes body-movement {
             0% {
-                border-top-left-radius: 70px;
-                border-top-right-radius: 90px;
-            }
-            20% {
-                border-top-left-radius: 70px;
-                border-top-right-radius: 90px;
-            }
-            25% {
-                border-top-left-radius: 80px;
-                border-top-right-radius: 80px;
-            }
-            30% {
-                border-top-left-radius: 90px;
+                border-top-left-radius: 400px;
                 border-top-right-radius: 70px;
-            }
-            70% {
-                border-top-left-radius: 90px;
-                border-top-right-radius: 70px;
-            }
-            75% {
-                border-top-left-radius: 80px;
-                border-top-right-radius: 80px;
-            }
-            80% {
-                border-top-left-radius: 70px;
-                border-top-right-radius: 90px;
+                border-bottom-left-radius: 400px;
+                border-bottom-right-radius: 700px;
             }
             100% {
-                border-top-left-radius: 70px;
-                border-top-right-radius: 90px;
+                border-top-left-radius: 400px;
+                border-top-right-radius: 70px;
+                border-bottom-left-radius: 400px;
+                border-bottom-right-radius: 700px;
             }
         }
         .jelly-inner {
             width: 50%;
             height: 100px;
             position: absolute;
-            left: 50%;
+            left: 200%;
             top: 35%;
             animation: move 10s infinite linear;
         }
         @keyframes move {
             0% {left: 60%}
             20% {left: 60%}
-            25% {left: 50%}
-            30% {left: 40%}
-            70% {left: 40%}
-            75% {left: 50%}
+            25% {left: 60%}
+            30% {left: 60%}
+            70% {left: 60%}
+            75% {left: 60%}
             80% {left: 60%}
             100% {left: 60%}
         }
@@ -192,114 +189,74 @@
         .jelly-eye::before {
             content: '';
             position: absolute;
-            left: 60px;
+            left: 200px;
             width: 20px;
             height: 20px;
-            background-color: #fff;
-            border-radius: 50%;
-        }
-        .jelly-eye::after {
-            content: '';
-            position: absolute;
-            left: -60px;
-            width: 20px;
-            height: 20px;
-            background-color: #fff;
+            background-color: #ffffff;
             border-radius: 50%;
         }
         .jelly-mouth {
             position: absolute;
-            width: 200px;
+            width: 10px;
             height: 80px;
-            background-color: #F4CFD1;
-            border-radius: 30px;
-            transform: translateX(-50%);
+            background-color: #000000;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            transform: translateX(70px);
         }
+        .jelly-mouth1 {
+            position: absolute;
+            width: 10px;
+            height: 80px;
+            background-color: #000000;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            transform: translateX(90px);
+        }
+        .jelly-mouth2 {
+            position: absolute;
+            width: 10px;
+            height: 80px;
+            background-color: #000000;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            transform: translateX(50px);
+        }
+
+
+        .jelly-tail {
+            width: 170px;
+            height: 250px;
+            border-top-right-radius: 1000px;
+            border-bottom-right-radius: 1000px;
+            background-color: #044b63;
+            position: absolute;
+            left: -50%;
+            animation: tail 0.09s infinite linear;
+        }
+
+        @keyframes tail {
+            0% {transform: rotate3d(0, 1, 0, 100deg) rotate3d(0, 0, 0, 1deg);}
+            20% {transform: rotate3d(0, 1, 0, 1deg) rotate3d(0, 0, 0, 1000deg);}
+            80% {transform: rotate3d(0, 1, 0, 1deg) rotate3d(0, 0, 0, 1000deg);}
+            100% {transform: rotate3d(0, 1, 0, 100deg) rotate3d(0, 0, 0, 1deg);}
+        }
+
         .jelly-mouth::before {
             content: '';
             position: absolute;
-            left: 50%;
+            left: 150px;
             top: 50%;
-            width: 60%;
+            width: 100px;
             height: 1px;
-            background-color: #FF9393;
+            background-color: #000000;
             transform: translateX(-50%);
-        }
-        .jelly-hand {
-            position: absolute;
-            top: 65px;
-        }
-        .jelly-hand::before {
-            content: '';
-            width: 45px;
-            height: 50px;
-            box-shadow: 0 5px 6px #3B949B;
-            position: absolute;
-            left: 105px;
-            border-radius: 0 0 50% 50%;
-        }
-        .jelly-hand::after {
-            content: '';
-            width: 45px;
-            height: 50px;
-            box-shadow: 0 5px 6px #3B949B;
-            position: absolute;
-            left: -150px;
-            border-radius: 0 0 50% 50%;
-        }
-        .jelly-tentacle1 {
-            width: 50px;
-            height: 50px;
-            background-color: #EBF28A;
-            border-radius: 0 0 50% 50%;
-            position: absolute;
-            box-shadow: 0 2px #008D98;
-            animation: tentacle 1s infinite ease-in -0.1s;
-        }
-        .jelly-tentacle2 {
-            width: 50px;
-            height: 50px;
-            background-color: #EBF28A;
-            border-radius: 0 0 50% 50%;
-            position: absolute;
-            left: 20%;
-            box-shadow: 0 2px #008D98;
-            animation: tentacle 1s infinite ease-in -0.2s;
-        }
-        .jelly-tentacle3 {
-            width: 50px;
-            height: 50px;
-            background-color: #EBF28A;
-            border-radius: 0 0 50% 50%;
-            position: absolute;
-            left: 40%;
-            box-shadow: 0 2px #008D98;
-            animation: tentacle 1s infinite ease-in -0.7s;
-        }
-        .jelly-tentacle4 {
-            width: 50px;
-            height: 50px;
-            background-color: #EBF28A;
-            border-radius: 0 0 50% 50%;
-            position: absolute;
-            left: 60%;
-            box-shadow: 0 2px #008D98;
-            animation: tentacle 1s infinite ease-in-0.2s;
-        }
-        .jelly-tentacle5 {
-            width: 50px;
-            height: 50px;
-            background-color: #EBF28A;
-            border-radius: 0 0 50% 50%;
-            position: absolute;
-            left: 80%;
-            box-shadow: 0 2px #008D98;
-            animation: tentacle 1s infinite ease-in -0.5s;
-        }
-        @keyframes tentacle {
-            0% {bottom: 15px;}
-            50% {bottom: 35px;}
-            100% {bottom: 15px;}
         }
     </style>
 </head>
@@ -316,19 +273,19 @@
         <div class="bubble-9"></div>
         <div class="bubble-10"></div>
         <div class="jelly-wrapper">
+
+            <div class="jelly-tail"></div>
             <div class="jelly-hair"></div>
             <div class="jelly-body">
                 <div class="jelly-inner">
                     <div class="jelly-eye"></div>
                     <div class="jelly-mouth"></div>
+                    <div class="jelly-mouth1"></div>
+                    <div class="jelly-mouth2"></div>
                     <div class="jelly-hand"></div>
                 </div>
             </div>
-            <div class="jelly-tentacle1"></div>
-            <div class="jelly-tentacle2"></div>
-            <div class="jelly-tentacle3"></div>
-            <div class="jelly-tentacle4"></div>
-            <div class="jelly-tentacle5"></div>
+            <div class="jelly-fin"></div>
         </div>
         <div class="bubble-11"></div>
         <div class="bubble-12"></div>
